--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='/static/css/dashboard.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='static/css/dashboard.css') }}">
 </head>
 <body>
   <h2>Welcome, {{ session.username }}</h2>
